Update Tick Grammar and CoCos